Ignore project files

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,6 @@ Routing.dSYM/Contents/Info.plist
 Routing.out.dSYM/Contents/Info.plist
 Router.exe
 Routing.exe
+Documentation.pdf
+Documentation.docx
+RoutingProject_NAJS.zip
